# event_deduplication

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.planning/: 1-CONTEXT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v0.1-MILESTONE-AUDIT.md  v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md  v0.2-MILESTONE-AUDIT.md  v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/: cinema-movies-false-merge-same-venue.md  investigate-80pct-match-review.md
config/: alembic.ini  matching.yaml
config/alembic/: env.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  entrypoint.sh  nginx-placeholder.html  nginx.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: generate_ground_truth.py  label_ground_truth.py  renormalize_titles.py  test_ai_integration.py
tests/: conftest.py  test_ai_e2e.py  test_ai_matching.py  test_ai_resolver.py  test_api.py  test_auto_labeler.py  test_blocking.py  test_candidate_generator.py  test_candidate_pairs.py  test_clustering.py  test_combiner.py  test_config_api.py  test_end_to_end.py  test_enrichment.py  test_export.py  test_export_cli.py  test_file_processor.py  test_harness.py  test_json_loader.py  test_matching_config.py  test_metrics.py  test_normalizer.py  test_orchestrator.py  test_persistence.py  test_pipeline.py  test_prefix_stripper.py  test_review_api.py  test_scorers.py  test_synonyms.py  test_synthesizer.py  test_watcher.py
(+175 files in other folders)
